# backpackers-api

./: .dockerignore  .env.example  .env.local.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 24da437524a4_drop_camping_spots_and_spot_reports_.py  4e7b6580fd0f_add_spot_reviews_table_and_rating_cache_.py  5fb2a5359e9a_add_spots_and_spot_business_info_tables.py  63acfe4acb74_change_has_equipment_rental_to_array.py  d3c40504a639_create_initial_tables.py  e97562523958_add_gocamping_fields_to_spots.py
app/: admin.py  dependencies.py  main.py
app/core/: config.py  database.py  security.py
app/crud/: camping_spot.py  review.py  spot.py  user.py
app/models/: __init__.py  camping_spot.py  review.py  spot.py  user.py
app/routers/: auth.py  camping_spots.py  reviews.py  spots.py
app/schemas/: camping_spot.py  review.py  spot.py  user.py
docs/: api-reference.md  architecture.md  codebase.md  deployment-progress.md  erd.md  frontend-google-auth.md  openapi.json  rename-backpackers-to-curve.md  security-review-2026-04-19.md  spots-search-api.md  testing-strategy.md
scripts/: entrypoint.sh  make_deploy_config.py  seed.py
scripts/oneoff/: import_gocamping.py  import_src01.py
tests/: conftest.py  test_auth.py  test_reviews.py  test_spots.py
