[project]
name = "backpackers-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.3",
    "asyncpg==0.29.0",
    "email-validator==2.2.0",
    "fastapi==0.115.0",
    "google-auth==2.35.0",
    "httpx==0.27.2",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
    "requests>=2.33.1",
    "sqlalchemy[asyncio]==2.0.35",
    "uvicorn[standard]==0.30.6",
]
